tests/snapshots/run_wpt_conformance__trtx_concat_two_int32_2D_tensors_of_same_shape_along_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "concat.https.any.js",
    "concat two int32 2D tensors of same shape along axis 0",
    "trtx",
    "PASS",
)
